feat: add task input and task list UI

--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
   <link rel="stylesheet" href="./src/assets/style.css" />
 </head>
 <body>
-
   <h1>Task Tracker</h1>
-  <p>Frontend Intern – Day 1</p>
 
-  <script src="./src/js/main.js"></script>
+  <div class="task-input">
+    <input type="text" placeholder="Enter a new task" />
+    <button>Add</button>
+  </div>
+
+  <ul class="task-list">
+    <li>Learn HTML</li>
+    <li>Learn CSS</li>
+    <li>Learn JavaScript</li>
+  </ul>
+
+  <script src="../js/main.js"></script>
 </body>
 </html>
 
