feat: add task logic and fix sctipt path

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li>Learn JavaScript</li>
   </ul>
 
-  <script src="../js/main.js"></script>
+  <script src="./src/js/main.js"></script>
 </body>
 </html>
 
