feat: complete and delete tasks

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
   </div>
 
   <ul class="task-list">
-    <li>Learn HTML</li>
-    <li>Learn CSS</li>
-    <li>Learn JavaScript</li>
-  </ul>
+  <!-- tasks will be added here -->
+</ul>
+
 
   <script src="./src/js/main.js"></script>
 </body>
