fix: correct task completion toggle and clean file separation

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <button>Add</button>
   </div>
 
+  <p id="emptyMessage" >No tasks yet</p>
+
   <ul class="task-list">
   <!-- tasks will be added here -->
-</ul>
-
+  </ul>
 
   <script src="./src/js/main.js"></script>
 </body>
